# sonic2

./: .gitignore  .gitmodules  LICENSE  Main.hs  bounded-array.nix  default.nix  halves.nix  kosinski.nix  megadrive-palette.nix  readme.md  sonic2.cabal  sonic2.nix
Game/Sega/Sonic/: Animation.hs  Blocks.hs  Cells.hs  Chunks.hs  Collision.hs  Error.hs  Game.hs  Layout.hs  Offsets.hs  Palette.hs  Player.hs  SpriteMappings.hs  Sprites.hs  Tiles.hs  Types.hs
musashi/: LICENSE  Main.hs  Musashi.hs  default.nix  libmusashi.nix  musashi.cabal  shell.nix
src/Game/Sega/Sonic/: Animation.hs  Blocks.hs  Chunks.hs  Game.hs  Layout.hs  Musashi.hs  Palette.hs  Sine.hs  Sprites.hs  Tiles.hs
test/: Main.hs
