name:                sonic2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable sonic2
  main-is:             Main.hs
  other-modules:       Game.Sega.Sonic.Chunks
                     , Game.Sega.Sonic.Collision
                     , Game.Sega.Sonic.Layout
  build-depends:       base
                     , array
                     , bytestring
                     , filepath
                     , mtl
                     , time
                     , kosinski
                     , lens
                     , megadrive-palette
                     , sdl2
                     , split
  default-language:    Haskell2010
