name:                sonic2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable sonic2
  main-is:             Main.hs
  other-modules:       Game.Sega.Sonic.Blocks
                     , Game.Sega.Sonic.Chunks
                     , Game.Sega.Sonic.Collision
                     , Game.Sega.Sonic.Error
                     , Game.Sega.Sonic.Layout
                     , Game.Sega.Sonic.Palette
                     , Game.Sega.Sonic.Sprites
                     , Game.Sega.Sonic.SpriteMappings
                     , Game.Sega.Sonic.Tiles
  build-depends:       base
                     , array
                     , bytestring
                     , filepath
                     , mtl
                     , time
                     , vector
                     , bounded-array
                     , halves
                     , kosinski
                     , lens
                     , megadrive-palette
                     , sdl2
                     , split
  default-language:    Haskell2010
