name:                sonic2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Sega.Sonic.Animation
                     , Game.Sega.Sonic.Blocks
                     , Game.Sega.Sonic.Chunks
                     , Game.Sega.Sonic.Collision
                     , Game.Sega.Sonic.Error
                     , Game.Sega.Sonic.Game
                     , Game.Sega.Sonic.Layout
                     , Game.Sega.Sonic.Musashi
                     , Game.Sega.Sonic.Offsets
                     , Game.Sega.Sonic.Palette
                     , Game.Sega.Sonic.Player
                     , Game.Sega.Sonic.Sine
                     , Game.Sega.Sonic.SpriteMappings
                     , Game.Sega.Sonic.Sprites
                     , Game.Sega.Sonic.Tiles
                     , Game.Sega.Sonic.Types
  build-depends:       base
                     , array
                     , bytestring
                     , filepath
                     , mtl
                     , time
                     , vector
                     , bounded-array
                     , halves
                     , kosinski
                     , lens
                     , linear
                     , megadrive-palette
                     , sdl2
                     , split
                     , musashi
  default-language:    Haskell2010

executable sonic2
  main-is:             Main.hs
  build-depends:       sonic2
  default-language:    Haskell2010

test-suite musashi-test
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , bytestring
                     , musashi
                     , sonic2
                     , hedgehog
                     , lens
                     , mtl
  main-is:             test/Main.hs
