name:                musashi
version:             0.1.0.0
synopsis:            Musashi m68k emulator bindings
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Musashi
  build-depends:       base >=4.10 && <4.11
                     , bytestring >=0.10 && <0.11
  pkgconfig-depends:   musashi
  default-language:    Haskell2010
